--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,21 +5,37 @@ android {
     buildToolsVersion "24.0.1"
     defaultConfig {
         applicationId "com.brioal.bottomtablayout"
-        minSdkVersion 19
+        minSdkVersion 17
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':bottomtab')
+    compile files('src/main/java/bin/gson-2.2.4.jar')
+    compile 'com.github.paolorotolo:appintro:4.1.0'
+    compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.github.CodeFalling:RecyclerViewSwipeDismiss:v1.1.3'
+    compile 'com.github.d-max:spots-dialog:0.7@aar'
+    compile 'com.oushangfeng:PinnedSectionItemDecoration:1.2.4'
+    compile 'com.yalantis:phoenix:1.2.3'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.8.5'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+    compile 'com.youth.banner:banner:1.4.4'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.github.ybq:Android-SpinKit:1.1.0'
 }
