--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,41 +1,43 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.1"
     defaultConfig {
         applicationId "com.brioal.bottomtablayout"
-        minSdkVersion 17
-        targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion 15
+        targetSdkVersion 22
+        versionCode 2
+        versionName "1.0.1"
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':bottomtab')
-    compile files('src/main/java/bin/gson-2.2.4.jar')
+
+    compile 'me.majiajie:pager-bottom-tab-strip:1.0.0'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.github.paolorotolo:appintro:4.1.0'
-    compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.github.CodeFalling:RecyclerViewSwipeDismiss:v1.1.3'
     compile 'com.github.d-max:spots-dialog:0.7@aar'
     compile 'com.oushangfeng:PinnedSectionItemDecoration:1.2.4'
     compile 'com.yalantis:phoenix:1.2.3'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.8.5'
-    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:support-v4:25.0.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
     compile 'com.youth.banner:banner:1.4.4'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.android.support:design:25.0.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.github.ybq:Android-SpinKit:1.1.0'
+    compile 'com.umeng.analytics:analytics:latest.integration'
 }
