--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.brioal.bottomtablayout">
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <application
-        android:name=".MyApplication"
+        android:name="com.brioal.bottomtablayout.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/log"
+        android:hardwareAccelerated="true"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"
-            >
+        <activity android:name="com.brioal.bottomtablayout.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Details_Activity" />
-        <activity android:name=".activity.WelcomeGuideActivity"
-            />
+        <activity android:name="com.brioal.bottomtablayout.MainActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+        <activity android:name="com.brioal.bottomtablayout.Details_Activity" />
+        <activity android:name="com.brioal.bottomtablayout.activity.WelcomeGuideActivity" />
+        <meta-data android:value="585c9f0104e20561700009b7"
+            android:name="UMENG_APPKEY"/>
+        <meta-data android:value="xinhe"
+            android:name="UMENG_CHANNEL"/>
     </application>
 
 </manifest>
